--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: purple;
-$secondary-color: yellow;
+$primary-color: #24292e;
+$secondary-color: white;
 
 * {
   box-sizing: border-box;
