--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -9,6 +9,12 @@
   margin: auto;
   color: $secondary-color;
 
+  &-logo {
+    &:hover {
+      color: darken($secondary-color, 20%);
+    }
+  }
+
   .menu-nav {
     list-style-type: none;
 
@@ -20,7 +26,7 @@
       padding: 0.5rem;
 
       &.active > a {
-        color: darken($secondary-color, 10%);
+        color: darken($secondary-color, 20%);
       }
     }
 
@@ -33,7 +39,7 @@
       @include transition-ease;
 
       &:hover {
-        color: darken($secondary-color, 10%);
+        color: darken($secondary-color, 20%);
       }
     }
   }
