--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,25 @@
 @import "config";
 @import "menu";
+@import "tasks";
 
 body {
   color: $primary-color;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
+  background: #fafafa;
 }
 
 header {
   background: $primary-color;
   padding: 6px;
   //   height: 44px;
-  //   position: fixed;
+  position: fixed;
+  z-index: 1;
   width: 100%;
 }
 
 main {
   width: 100%;
+  height: 100%;
 }
