--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,8 @@
 $primary-color: #24292e;
 $secondary-color: white;
 
+$generic-border: 1px solid #f1f1f1;
+
 * {
   box-sizing: border-box;
   margin: 0;
