--- a/scss/_tasks.scss
+++ b/scss/_tasks.scss
@@ -1,20 +1,85 @@
-.container {
+.content {
+  display: grid;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  grid-template-columns: 1fr auto;
   max-width: 922px;
   margin: auto;
+}
 
-  .sidebar {
-    width: 266px;
-    position: fixed;
-    background-color: #fafafa;
-    height: calc(100vh - 50px);
-    overflow-x: hidden;
-    overflow-y: hidden;
-    padding-top: 74px;
-    border-right
+.sidebar {
+  width: 266px;
+  position: fixed;
+  background-color: #fafafa;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding-top: 74px;
+  border-right: $generic-border;
+}
+
+.tasks {
+  width: 656px;
+  margin-left: 266px;
+  background-color: $secondary-color;
+  min-height: 100vh;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 80px;
+  padding-bottom: 84px;
+
+  &__add-task li {
+    cursor: pointer;
+    list-style-type: none;
+    line-height: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+
+    &:hover {
+      color: red;
+    }
+
+    .tasks__add-task__icon {
+      color: red;
+      font-size: 25px;
+      margin-right: 12px;
+    }
+
+    .tasks__add-task__text {
+      // color: $primary-color;
+      font-size: 14px;
+    }
   }
 
-  .tasks {
-    width: 656px;
-    margin-left: 266px;
+  h2 {
+    margin-bottom: 20px;
+  }
+
+  &__list li {
+    list-style-type: none;
+    line-height: 18px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    border-bottom: $generic-border;
+    display: flex;
+
+    .checkbox-holder {
+      margin-right: 12px;
+      line-height: 16px;
+
+      .checkbox {
+        cursor: pointer;
+        border-color: gray;
+        color: #343434;
+        height: 16px;
+        width: 16px;
+        display: block;
+        border: 1px solid gray;
+        border-radius: 16px;
+      }
+    }
   }
 }
