--- a/scss/_tasks.scss
+++ b/scss/_tasks.scss
@@ -19,12 +19,16 @@
   border-right: $generic-border;
 
   &__list li {
-    margin-top: 10px;
     min-height: 24px;
-    padding: 5px;
-    font-size: 14px;
+    padding: 5px 16px 5px 5px;
+    font-size: 16px;
     line-height: 18px;
+    border-radius: 3px;
     cursor: pointer;
+
+    .sidebar__list__item {
+      margin-left: 12px;
+    }
 
     &:hover {
       background-color: lighten($secondary-color, 10%);
@@ -59,10 +63,17 @@
     font-size: 14px;
     display: flex;
 
+    &:hover {
+      color: purple;
+
+      i {
+      }
+    }
+
     .tasks__add-task__icon-holder {
       margin-right: 12px;
       line-height: 16px;
-      color: red;
+      color: purple;
       cursor: pointer;
     }
   }
