--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 @import "tasks";
 
 body {
-  color: $primary-color;
+  color: #333;
   height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
